@@ -79,6 +79,7 @@ if sys.platform == 'win32':
     # sys.prefix is (likely) C:\Python*;
     # check only C:\Python*.
     prefs.append(sys.prefix)
+    prefs.append(os.path.join(sys.prefix, 'Lib', 'site-packages'))
 else:
     # On other (POSIX) platforms, things are more complicated due to
     # the variety of path names and library locations.  Try to be smart
@@ -120,7 +121,11 @@ else:
         # check only /foo/lib/scons*.
         prefs.append(sys.prefix)
 
-    prefs = map(lambda x: os.path.join(x, 'lib'), prefs)
+    temp = map(lambda x: os.path.join(x, 'lib'), prefs)
+    temp.extend(map(lambda x: os.path.join(x, 'lib', 'python%d.%d' % (sys.version_info[0],
+                                                                      sys.version_info[1]),
+                                           'site-packages'), prefs))
+    prefs = temp
 
 # Look first for 'scons-__version__' in all of our preference libs,
 # then for 'scons'.
